; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_crltest.c_glue2bio.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_crltest.c_glue2bio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8**, i8**)* @glue2bio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @glue2bio(i8** %0, i8** %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i64, align 8
  store i8** %0, i8*** %3, align 8
  store i8** %1, i8*** %4, align 8
  store i64 0, i64* %5, align 8
  %6 = load i8**, i8*** %3, align 8
  %7 = call i8* @glue_strings(i8** %6, i64* %5)
  %8 = load i8**, i8*** %4, align 8
  store i8* %7, i8** %8, align 8
  %9 = load i8**, i8*** %4, align 8
  %10 = load i8*, i8** %9, align 8
  %11 = load i64, i64* %5, align 8
  %12 = call i32* @BIO_new_mem_buf(i8* %10, i64 %11)
  ret i32* %12
}

declare dso_local i8* @glue_strings(i8**, i64*) #1

declare dso_local i32* @BIO_new_mem_buf(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
